--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,9 +96,24 @@ const last_posts = posts.slice(0, 3);
     <span class="font-semibold ">Mail id:</span> iamtusharpuri@gmail.com
   </div>
   <div class="pt-4">
-    <span class="font-semibold ">Resume:</span> <a class="text-blue-600 font-semibold" href="https://drive.google.com/file/d/14O8TwbR4K_PnNRhZ8AuW5txY0wkvGM9Q/view?usp=sharing" target="_blank">Link</a>
+    <span class="font-semibold ">Resume:</span> <a class="text-blue-600 font-semibold" href="https://drive.google.com/file/d/1SsQqlCosGsFo-WoyaUBn-2j2NrCDclcE/view?usp=sharing" target="_blank">Link</a>
   </div>
   </div>
+
+  <!-- <div>
+    <div class="text-3xl w-full font-bold mb-2">Experience {"</>"}</div>
+  </div>
+
+  <HorizontalCard
+    title="Gamersberg"
+    img=""
+    p1="Worked on the complete design and development of website (currently in testing phase) using TypeScript, Next.js, Node.js and Prisma ORM with Postgre SQL."
+    p2="Developed and implemented OAuth authorization for Roblox, enabling secure authentication and authorization."
+    p3="Designed and implemented a real-time chat system using Socket.IO to facilitate instant messaging within the website."
+    p4="Developed a continuous integration and continuous deployment (CI/CD) pipeline to automate the building, testing, and deployment of Docker containers to Google Cloud Platform (GCP)."
+    p5="Other Technologies used: Google Artifact Registry, Google Compute Engine and Google Cloud SQL."
+    desc=""
+  /> -->
 
   <div>
     <div class="text-3xl w-full font-bold mb-2">My projects {"</>"}</div>
