--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ const last_posts = posts.slice(0, 3);
       <div>
         <div class="text-md py-1">Hey there 👋</div>
         <div class="md:text-4xl text-3xl font-bold">I'm Tushar Puri</div>
-        <div class="md:text-2xl text-lg py-3 font-bold">Full Stack Developer | AI & LLM Enthusiast</div>
-        <div class="text-md hidden md:block"> I'm a 3rd year CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project <span class="font-semibold">"cloudstash"</span>.</div>
+        <div class="md:text-2xl text-lg py-3 font-bold">Full Stack Developer</div>
+        <div class="text-md hidden md:block"> I'm a 2025 CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project <span class="font-semibold">"cloudstash"</span>.</div>
       </div>
       <div class="w-fit">
         <a href="/">
@@ -31,9 +31,8 @@ const last_posts = posts.slice(0, 3);
     </div>
     <div class="py-2">
       <text class="text-md">
-        <div class="text-md md:hidden block pb-2"> I'm a 3rd year CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project "cloudstash". </div>
-        The recent trend in <span class="font-semibold">Large Language Models (LLM)</span> has also sparked my interest in the field of AI and I've been working on a few projects in that domain. <br>
-        I'm currently on the lookout for internships opportunities in the field of web development and AI. If you're looking for someone like me, feel free to reach out.
+        <div class="text-md md:hidden block pb-2"> I'm a 2025 CS grad CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project "cloudstash". </div>
+        I'm currently working as FullStack developer at gamersberg. If you're looking for someone like me, feel free to reach out.
       </text>
     </div>
     <div class="social-icons pt-3 flex self-center justify-left sticky bottom-0">
@@ -96,24 +95,25 @@ const last_posts = posts.slice(0, 3);
     <span class="font-semibold ">Mail id:</span> iamtusharpuri@gmail.com
   </div>
   <div class="pt-4">
-    <span class="font-semibold ">Resume:</span> <a class="text-blue-600 font-semibold" href="https://drive.google.com/file/d/1SsQqlCosGsFo-WoyaUBn-2j2NrCDclcE/view?usp=sharing" target="_blank">Link</a>
+    <span class="font-semibold ">Resume:</span> <a class="text-blue-600 font-semibold" href="https://drive.google.com/file/d/1SsQqlCosGsFo-WoyaUBn-2j2NrCDclcE/view?usp=drive_link" target="_blank">Link</a>
   </div>
   </div>
 
-  <!-- <div>
+  <div>
     <div class="text-3xl w-full font-bold mb-2">Experience {"</>"}</div>
   </div>
 
   <HorizontalCard
-    title="Gamersberg"
+    title="Full Stack Developer at Gamersberg (March 2024– Present)"
     img=""
-    p1="Worked on the complete design and development of website (currently in testing phase) using TypeScript, Next.js, Node.js and Prisma ORM with Postgre SQL."
-    p2="Developed and implemented OAuth authorization for Roblox, enabling secure authentication and authorization."
-    p3="Designed and implemented a real-time chat system using Socket.IO to facilitate instant messaging within the website."
-    p4="Developed a continuous integration and continuous deployment (CI/CD) pipeline to automate the building, testing, and deployment of Docker containers to Google Cloud Platform (GCP)."
-    p5="Other Technologies used: Google Artifact Registry, Google Compute Engine and Google Cloud SQL."
+    p1="Designed and developed the website for Gamersberg, a gaming community."
+    p2="Implemented OAuth authorization for Roblox, enabling secure authentication and authorization."
+    p3="Built a real-time chat system using Socket.IO for instant messaging and smooth trade."
+    p4="Developed a CI/CD pipeline to automate the building, testing, and deployment, reducing manual intervention by 75% and accelerating the release cycle from an average of 2 weeks to just 2 hours."
+    p5="Tech Stack: Next.js, Node.js, Prisma ORM, Postgre SQL."
+    p6="Tools Used: Google Artifact Registry, Google Compute Engine, Google Cloud SQL, Docker."
     desc=""
-  /> -->
+  />
 
   <div>
     <div class="text-3xl w-full font-bold mb-2">My projects {"</>"}</div>
@@ -122,9 +122,9 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCard
     title="Tubeify"
     img="/tubeify.png"
-    p1="Summarize YouTube videos ( Currently beta version is live which uses OpenAI API )."
-    p2="Built with Latest version of Next Js, Tailwind CSS and Shadcn UI ( base version is utilizing fintuned Flan-T5 model with the help of Django )."
-    p3="Goal is to help students to save their time and learn more effectively."
+    p1="Summarize YouTube videos by breaking them into chunks for easier study."
+    p2=" Utilized Llama 3 API via Groq in the Beta Version for enhanced performance."
+    p3="Fine-tuned the Flan-T5 model using LoRA-PEFT and developed a Django-based summarization tool."
     github="https://github.com/TusharPuri10/Tubeify"
     live="https://tubeify.vercel.app/"
     desc=""
@@ -133,9 +133,9 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCard
     title="Cloudstash"
     img="/cloudstash.png"
-    p1="Manage and share your digital assets."
-    p2="Leverages the power of React Three Fiber, Next.js, TypeScript and AWS S3."
-    p3="Goal is to provide secure and beautiful alternative to Google Drive and Dropbox."
+    p1="Built a secure cloud storage solution for efficient file management with an intuitive user interface."
+    p2="Used Prisma Accelerate to reduce database query latency and improve overall performance by caching 50% of queries."
+    p3="User can upload, delete, rename, download and share their files."
     desc=""
     github="https://github.com/TusharPuri10/cloudstash"
     live="https://cloudstash-tusharpuri10.vercel.app/"
@@ -144,8 +144,8 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCard
     title="MoodMeter"
     img="/twitterDepression.png"
-    p1="Analyze depressive tweets using LSTM neural network. (Model is ready to be deployed)"
-    p2="Built on Flask, React Js, Firebase and Keras & TensorFlow"
+    p1=" Created a platform analyzing depressive tweets using an LSTM-based model."
+    p2="Dockerized the application for consistent and efficient development and testing environments."
     p3="Goal is to explore how people express their emotions related to depression on social media and to identify patterns and trends in their language usage."
     desc=""
     github="https://github.com/TusharPuri10/DepressiveTweetsAnalysis"
