--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,22 +8,22 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <div class="text-3xl w-full font-bold mb-5">All Projects</div>
   </div>
   <HorizontalCard
-    title="Tubeify"
-    img="/tubeify.png"
-    p1="Summarize YouTube videos ( Currently beta version is live which uses OpenAI API )."
-    p2="Built with Latest version of Next Js, Tailwind CSS and Shadcn UI ( base version is utilizing fintuned Flan-T5 model with the help of Django )."
-    p3="Goal is to help students to save their time and learn more effectively."
-    github="https://github.com/TusharPuri10/Tubeify"
-    live="https://tubeify.vercel.app/"
-    desc=""
-  />
-  <div class="divider my-0"></div>
+  title="Tubeify"
+  img="/tubeify.png"
+  p1="Summarize YouTube videos by breaking them into chunks for easier study."
+  p2=" Utilized Llama 3 API via Groq in the Beta Version for enhanced performance."
+  p3="Fine-tuned the Flan-T5 model using LoRA-PEFT and developed a Django-based summarization tool."
+  github="https://github.com/TusharPuri10/Tubeify"
+  live="https://tubeify.vercel.app/"
+  desc=""
+/>
+<div class="divider my-0"></div>
   <HorizontalCard
     title="Cloudstash"
     img="/cloudstash.png"
-    p1="Manage and share your digital assets."
-    p2="Leverages the power of React Three Fiber, Next.js, TypeScript and AWS S3."
-    p3="Goal is to provide secure and beautiful alternative to Google Drive and Dropbox."
+    p1="Built a secure cloud storage solution for efficient file management with an intuitive user interface."
+    p2="Used Prisma Accelerate to reduce database query latency and improve overall performance by caching 50% of queries."
+    p3="User can upload, delete, rename, download and share their files."
     desc=""
     github="https://github.com/TusharPuri10/cloudstash"
     live="https://cloudstash-tusharpuri10.vercel.app/"
@@ -32,8 +32,8 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <HorizontalCard
     title="MoodMeter"
     img="/twitterDepression.png"
-    p1="Analyze depressive tweets using LSTM neural network. (Model is ready to be deployed)"
-    p2="Built on Flask, React Js, Firebase and Keras & TensorFlow"
+    p1=" Created a platform analyzing depressive tweets using an LSTM-based model."
+    p2="Dockerized the application for consistent and efficient development and testing environments."
     p3="Goal is to explore how people express their emotions related to depression on social media and to identify patterns and trends in their language usage."
     desc=""
     github="https://github.com/TusharPuri10/DepressiveTweetsAnalysis"
