--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const last_posts = posts.slice(0, 3);
     </div>
     <div class="py-2">
       <text class="text-md">
-        <div class="text-md md:hidden block pb-2"> I'm a 2025 CS grad CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project "cloudstash". </div>
+        <div class="text-md md:hidden block pb-2"> I'm a 2025 CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project "cloudstash". </div>
         I'm currently working as FullStack developer at gamersberg. If you're looking for someone like me, feel free to reach out.
       </text>
     </div>
@@ -104,7 +104,7 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="Full Stack Developer at Gamersberg (March 2024– Present)"
+    title="Full Stack Developer at Gamersberg (Remote) (March 2024– Present)"
     img=""
     p1="Designed and developed the website for Gamersberg, a gaming community."
     p2="Implemented OAuth authorization for Roblox, enabling secure authentication and authorization."
