--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,7 @@ const last_posts = posts.slice(0, 3);
       <text class="text-md">
         <div class="text-md md:hidden block pb-2"> I'm a 2025 CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project "cloudstash". </div>
         I'm currently working as FullStack developer at gamersberg. If you're looking for someone like me, feel free to reach out.
+        Check <a class="text-blue-600 font-semibold" href="https://tusharpuri10.github.io/" target="_blank">stats</a>✨
       </text>
     </div>
     <div class="social-icons pt-3 flex self-center justify-left sticky bottom-0">
