--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const last_posts = posts.slice(0, 3);
         <div class="text-md py-1">Hey there 👋</div>
         <div class="md:text-4xl text-3xl font-bold">I'm Tushar Puri</div>
         <div class="md:text-2xl text-lg py-3 font-bold">Full Stack Developer</div>
-        <div class="text-md hidden md:block"> I'm a 2025 CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project <span class="font-semibold">"cloudstash"</span>.</div>
+        <div class="text-md hidden md:block"> I'm a 2025 CS grad, who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project <span class="font-semibold">"cloudstash"</span>.</div>
       </div>
       <div class="w-fit">
         <a href="/">
@@ -31,7 +31,7 @@ const last_posts = posts.slice(0, 3);
     </div>
     <div class="py-2">
       <text class="text-md">
-        <div class="text-md md:hidden block pb-2"> I'm a 2025 CS grad and who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project "cloudstash". </div>
+        <div class="text-md md:hidden block pb-2"> I'm a 2025 CS grad, who enjoys <span class="font-semibold">web development</span> ever since I built my first <span class="font-semibold">TypeScript</span> project "cloudstash". </div>
         I'm currently working as FullStack developer at gamersberg. If you're looking for someone like me, feel free to reach out.
         Check <a class="text-blue-600 font-semibold" href="https://tusharpuri10.github.io/" target="_blank">stats</a>✨
       </text>
