--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,14 +105,14 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="Full Stack Developer at Gamersberg (Remote) (March 2024– Present)"
+    title="Full Stack Developer at Gamersberg (Remote) (March 2024 – Present)"
     img=""
     p1="Designed and developed the website for Gamersberg, a gaming community."
     p2="Implemented OAuth authorization for Roblox, enabling secure authentication and authorization."
     p3="Built a real-time chat system using Socket.IO for instant messaging and smooth trade."
     p4="Developed a CI/CD pipeline to automate the building, testing, and deployment, reducing manual intervention by 75% and accelerating the release cycle from an average of 2 weeks to just 2 hours."
     p5="Tech Stack: Next.js, Node.js, Prisma ORM, Postgre SQL."
-    p6="Tools Used: Google Artifact Registry, Google Compute Engine, Google Cloud SQL, Docker."
+    p6="Tools Used: Google Artifact Registry, Google Compute Engine, Google Cloud SQL, Docker, Redis."
     desc=""
   />
 
