--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,12 +107,11 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCard
     title="Full Stack Developer at Gamersberg (Remote) (March 2024 – Present)"
     img=""
-    p1="Designed and developed the website for Gamersberg, a gaming community."
-    p2="Implemented OAuth authorization for Roblox, enabling secure authentication and authorization."
-    p3="Built a real-time chat system using Socket.IO for instant messaging and smooth trade."
-    p4="Developed a CI/CD pipeline to automate the building, testing, and deployment, reducing manual intervention by 75% and accelerating the release cycle from an average of 2 weeks to just 2 hours."
-    p5="Tech Stack: Next.js, Node.js, Prisma ORM, Postgre SQL."
-    p6="Tools Used: Google Artifact Registry, Google Compute Engine, Google Cloud SQL, Docker, Redis."
+    p1="Designed and developed a real-time trading platform for game items, serving over 50,000 users, with around 500 actively connected at any given time."
+    p2="Built the entire system stack, including front-end UI, backend servers, and database architecture."
+    p3="Implemented a scalable chat system using Socket.IO and Redis Pub/Sub for instant communication and smooth transactions."
+    p4="Created a giveaway feature leveraging Google Cloud Storage and Cloud Scheduler."
+    p5="Developed a CI/CD pipeline and optimized the infrastructure using Google Network Load Balancer and Managed Instance Group, boosting automation, scalability, and reliability."
     desc=""
   />
 
