--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,6 +112,7 @@ const last_posts = posts.slice(0, 3);
     p3="Implemented a scalable chat system using Socket.IO and Redis Pub/Sub for instant communication and smooth transactions."
     p4="Created a giveaway feature leveraging Google Cloud Storage and Cloud Scheduler."
     p5="Developed a CI/CD pipeline and optimized the infrastructure using Google Network Load Balancer and Managed Instance Group, boosting automation, scalability, and reliability."
+    live="https://www.gamersberg.com/"
     desc=""
   />
 
