--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,7 +105,7 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="Full Stack Developer at Gamersberg (Remote) (March 2024 – Present)"
+    title="Founding Engineer at Gamersberg (Remote) (March 2024 – Present)"
     img=""
     p1="Designed and developed a real-time trading platform for game items, serving over 50,000 users, with around 500 actively connected at any given time."
     p2="Built the entire system stack, including front-end UI, backend servers, and database architecture."
