--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,11 +107,9 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCard
     title="Founding Engineer at Gamersberg (Remote) (March 2024 – Present)"
     img=""
-    p1="Designed and developed a real-time trading platform for game items, serving over 50,000 users, with around 500 actively connected at any given time."
-    p2="Built the entire system stack, including front-end UI, backend servers, and database architecture."
-    p3="Implemented a scalable chat system using Socket.IO and Redis Pub/Sub for instant communication and smooth transactions."
-    p4="Created a giveaway feature leveraging Google Cloud Storage and Cloud Scheduler."
-    p5="Developed a CI/CD pipeline and optimized the infrastructure using Google Network Load Balancer and Managed Instance Group, boosting automation, scalability, and reliability."
+    p1="Developed a large-scale platform for trading game items, with hundreds of active users at any time."
+    p2="Built the entire system stack, including front-end UI, backend servers, and database architecture for smooth and efficient trades."
+    p3="Added automated features, including scheduled giveaways and regular updates, for scalability and reliability."
     live="https://www.gamersberg.com/"
     desc=""
   />
