--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,10 +106,11 @@ const last_posts = posts.slice(0, 3);
 
   <HorizontalCard
     title="Founding Engineer at Gamersberg (Remote) (March 2024 – Present)"
-    img=""
+    img="/logo.png"
     p1="Developed a large-scale platform for trading game items, with hundreds of active users at any time."
     p2="Built the entire system stack, including front-end UI, backend servers, and database architecture for smooth and efficient trades."
     p3="Added automated features, including scheduled giveaways and regular updates, for scalability and reliability."
+    small="true"
     live="https://www.gamersberg.com/"
     desc=""
   />
