--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,12 +107,10 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCard
     title="Full Stack Developer at Gamersberg (Remote) (March 2024 – Present)"
     img=""
-    p1="Designed and developed the website for Gamersberg, a gaming community."
-    p2="Implemented OAuth authorization for Roblox, enabling secure authentication and authorization."
+    p1="Developed a large-scale platform for trading game items, with hundreds of active users at any time."
+    p2="Built the entire system stack, including front-end UI, backend servers, and database architecture for smooth and efficient trades."
     p3="Built a real-time chat system using Socket.IO for instant messaging and smooth trade."
-    p4="Developed a CI/CD pipeline to automate the building, testing, and deployment, reducing manual intervention by 75% and accelerating the release cycle from an average of 2 weeks to just 2 hours."
-    p5="Tech Stack: Next.js, Node.js, Prisma ORM, Postgre SQL."
-    p6="Tools Used: Google Artifact Registry, Google Compute Engine, Google Cloud SQL, Docker, Redis."
+    p4="Added automated features, including scheduled giveaways and regular updates, for scalability and reliability."
     desc=""
   />
 
