--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,7 +96,7 @@ const last_posts = posts.slice(0, 3);
     <span class="font-semibold ">Mail id:</span> iamtusharpuri@gmail.com
   </div>
   <div class="pt-4">
-    <span class="font-semibold ">Resume:</span> <a class="text-blue-600 font-semibold" href="https://drive.google.com/file/d/1SsQqlCosGsFo-WoyaUBn-2j2NrCDclcE/view?usp=drive_link" target="_blank">Link</a>
+    <span class="font-semibold ">Resume:</span> <a class="text-blue-600 font-semibold" href="https://drive.google.com/file/d/1vI89sBRIwSv4zkkKxxYSLSDOlGTf6bUz/view?usp=sharing" target="_blank">Link</a>
   </div>
   </div>
 
@@ -105,7 +105,7 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="Full Stack Developer at Gamersberg (Remote) (March 2024 – Present)"
+    title="Founding Engineer at Gamersberg (Remote) (March 2024 – Present)"
     img=""
     p1="Developed a large-scale platform for trading game items, with hundreds of active users at any time."
     p2="Built the entire system stack, including front-end UI, backend servers, and database architecture for smooth and efficient trades."
