--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const last_posts = posts.slice(0, 3);
         <a href="/">
           <div class="avatar transition ease-in-out hover:scale-[102%] block m-auto md:pl-0 pl-10">
             <div class="w-[10rem]">
-              <Image class="rounded-xl border-2" format="webp" width={350} height={350} src="/suit.jpg" alt="Profile image" />
+              <Image class="rounded-xl border-2" format="webp" width={350} height={350} src="/suit.png" alt="Profile image" />
             </div>
           </div>
         </a>
